unit_tests/preprocessor/errors/recover-from-bad-if-expression.correct
preprocessor/errors/recover-from-bad-if-expression:1: error: Invalid expression
